# signal-tty

./: CLAUDE.md  Cargo.toml
src/: app.rs  avatar.rs  image_cache.rs  main.rs
src/events/: key.rs  mod.rs  mouse.rs
src/infrastructure/: mod.rs
src/infrastructure/jsonrpc/: client.rs  mod.rs  types.rs
src/infrastructure/signal/: client.rs  error.rs  mod.rs  repository.rs  types.rs
src/infrastructure/transport/: mod.rs  stdio.rs
src/storage/: mod.rs  models.rs  repository.rs
src/storage/sqlite/: migrations.rs  mod.rs
src/ui/: conversations.rs  file_browser.rs  input.rs  messages.rs  mod.rs
