[package]
name = "signal-tty"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
